# GTU_Courses

./: README.md
BİL372_Bilgisayar Ağları/Onur_SEZER_121044074/: 2016 odev2.docx  Onur_SEZER_121044074.pkt
CSE102_Computer Programming/HW02/: args.txt  in.txt  main.c  main.c~  out.txt
CSE102_Computer Programming/HW07_121044074_Onur_Sezer/: main.c  main.c~
CSE102_Computer Programming/HW08_121044074_Onur_Sezer /: main.c
CSE102_Computer Programming/HW09_121044074_Onur_Sezer/: main.c
CSE102_Computer Programming/HW5/: in.txt
CSE102_Computer Programming/HWTP_121044074_Onur_Sezer /: main.c  project.c  project.h
CSE102_Computer Programming/project/: deneme.txt~  deneme3.c~  deneme4.c~  exe  input.txt~  insert.txt~  main.c~  makefile~  my_input.txt  on.c  on.c~  project.c~  project.h~  query.txt~  test  test.c
CSE222_Data Structures and Algorithms/HW1/: Thumbs.db
CSE222_Data Structures and Algorithms/HW2/: Thumbs.db
CSE222_Data Structures and Algorithms/HW3/: Rapor.docx  Thumbs.db
CSE222_Data Structures and Algorithms/HW4/: Rapor.docx  hw4_example.rar
CSE222_Data Structures and Algorithms/HW5/: Thumbs.db
CSE222_Data Structures and Algorithms/HW6/: Thumbs.db
CSE222_Data Structures and Algorithms/HW7/: Thumbs.db
CSE222_Data Structures and Algorithms/HW8/: Thumbs.db
CSE241_Object Oriented Programming/HW01_121044074_Onur_Sezer/: main.cpp
CSE241_Object Oriented Programming/HW02_121044074_Onur_Sezer/: main.cpp
CSE331_Computer Organization/: README.md
CSE396_Proje2/cinAliDetection/: CMakeLists.txt  Frame.cpp  Frame.h  main.cpp
(+842 files in other folders)
